base/frontend/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "3"
  name: frontend
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: frontend
